[package]
name = "sequence_trie"
version = "0.1.0"
description = "Trie-like data-structure for storing sequences of values."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

documentation = "https://michaelsproul.github.io/rust_sequence_trie/"
repository = "https://github.com/michaelsproul/rust_sequence_trie"

keywords = ["trie", "tree", "hash", "data-structure", "collection"]

[lib]
name = "sequence_trie"
