[package]
name = "sequence_trie"
version = "0.3.5"
description = "Trie-like data-structure for storing sequences of values."

license = "MIT/Apache-2.0"
authors = ["Michael Sproul <micsproul@gmail.com>", "Alex Gulyás <gulyas.alex@gmail.com>"]

documentation = "https://docs.rs/sequence_trie/"
repository = "https://github.com/michaelsproul/rust_sequence_trie"
readme = "README.md"

keywords = ["trie", "tree", "hash", "data-structure", "collection"]

[lib]
name = "sequence_trie"

[features]
btreemap = []

[dependencies]
serde = { version = "^1.0", optional = true, features = ["derive"] }
